# Pdf_to_json

./: .coverage  .gitignore  README.md  [Fund Factsheet - May]360ONE-MF-May 2025.pdf.json  [Fund Factsheet - May]360ONE-MF-May 2025.structured.json  config.example.yaml  demo_logging.py  json_builder_test_output.json  pyproject.toml  table_extraction_demo.py  table_extraction_demo_results.json  task3_demo.py  test_config.py  test_error_handling.py  test_json_builder.py
rfp-bid-main/example-PDF/: test.flat.json  test.structured.json
rfp-bid-main/main/: session.db
src/pdf_extractor/: __init__.py  chart_extractor.py  cli.py  config.py  content_classifier.py  extractor.py  json_builder.py  logging_utils.py  models.py  page_processor.py  schema.json  structure_builder.py  table_extractor.py  table_normalizer.py  table_wrappers.py  text_cleaner.py
tests/: create_test_pdf.py
tests/integration/: test_pipeline.py  test_real_pdf.py  test_text_cleaner.py
tests/unit/: test_basic_functionality.py  test_logging.py  test_page_processor.py  test_table_extraction.py
