[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-to-json-extractor"
version = "1.0.0"
description = "A comprehensive Python application that extracts content from PDF files and converts it into well-structured JSON format"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"
packages = [{include = "pdf_extractor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "~1.24.1"
pdfplumber = "~0.11.0"
camelot-py = {extras = ["cv"], version = "~0.11.0"}
tabula-py = "~2.8.0"
pillow = "~10.3.0"
click = "~8.1.7"
pyyaml = "^6.0"
jsonschema = "^4.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
pdf-extract = "pdf_extractor.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/pdf_extractor --cov-report=term-missing --cov-fail-under=80"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pdf_extractor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
